// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignment 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0>*+*:not(marquee) {
  margin-top: calc(4px * 2);
}

.emotion-0>* {
  min-height: 0;
}

<div
  class="components-flex components-h-stack components-v-stack emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="VStack"
>
  <div
    class="emotion-1 emotion-2"
  />
  <div
    class="emotion-1 emotion-2"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-0>*+*:not(marquee) {
  margin-top: calc(4px * 2);
}

.emotion-0>* {
  min-height: 0;
}

<div
  class="components-flex components-h-stack components-v-stack emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="VStack"
>
  <div
    class="emotion-1 emotion-2"
  />
  <div
    class="emotion-1 emotion-2"
  />
</div>
`;

exports[`props should render spacing 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-0>*+*:not(marquee) {
  margin-top: calc(4px * 5);
}

.emotion-0>* {
  min-height: 0;
}

<div
  class="components-flex components-h-stack components-v-stack emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="VStack"
>
  <div
    class="emotion-1 emotion-2"
  />
  <div
    class="emotion-1 emotion-2"
  />
</div>
`;
